contrast error fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -279,7 +279,7 @@ footer a {
 
 /******* Notices / Errors *******/
 .required-notice {
-  color: #d9534f;
+  color: #b52b27;
   font-size: var(--font-xs);
   text-align: center;
   margin-bottom: 1.5rem;
